[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.1" }
gl = { path = "lib/gl" }
ogl_main = { path = "lib/ogl_main" }

[features]
gl_debug = ["gl/debug"]